Frontend: comentarios codigo y correccion etiquetas SEO en html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/cart.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Ecommerce JPELabs</title>
+    
+    <meta name="description" content="Ecommerce JPELabs is a single-page web application for buisnesses to sell their products online. It provides a user-friendly interface for customers to browse and purchase products, as well as a secure payment system. The application is built using modern web technologies and is designed to be responsive and accessible on all devices.">
+    <meta name="keywords" content="Ecommerce, Prediction, Delays, Flights, Data Science">
+    <meta name="author" content="Ecommerce">
+
+    <meta property="og:title" content="Ecommerce | Frontend Developer">
+    <meta property="og:description" content="Single-page web for selling products online.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ecommerce.dev">
+
   </head>
   <body>
     <div id="root"></div>
